[Mac] Lock the Fullscreen Toolbar Visibility

Currently if the Fullscreen Toolbar's style is set
to "hidden", TopChrome will hide, even if keyboard
access or Voice Over is focused on one of its views.

This creates a challenge for accessibility users
who are trying to navigate TopChrome. To fix this
issue, BrowserWindowController will lock the
fullscreen's toolbar visibility in fullscreen if
one of TopChrome's view gains first responder
status.

Bug: 775124
Change-Id: I14ba02eaa1410e8f9096540bf5c7935cacd2c402
Reviewed-on: https://chromium-review.googlesource.com/728417
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511201}
Former-commit-id: 611bc1e28e9131c6bc94b931cf48d1e770290f45